templates/status-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-server
  namespace: neves
spec:
  replicas: 2
  selector:
    matchLabels:
      app: status
  template:
    metadata:
      labels:
        app: status
        namespace: neves
    spec:
      containers:
        - name: status-container
          image: public.ecr.aws/k8s0f8l3/neves/status-service:latest
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: status
spec:
  selector:
    app: status
  type: ClusterIP
  ports:
    - name: basic
      protocol: TCP
      port: 80
      targetPort: 8080
