templates/HTTPRouteAPI.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
spec:
  hostnames:
    - "api.neves-box.com"
  parentRefs:
    - name: neves-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /status
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: status
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /users
      backendRefs:
        - name: user-server-service
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /videos
      backendRefs:
        - name: play-server-service
          port: 80
