templates/HTTPRouteMnt.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mnt-route
  namespace: istio-system
spec:
  hostnames:
    - "mnt.neves-box.com"
  parentRefs:
    - name: neves-gw
      namespace: neves
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kiali
      backendRefs:
        - name: kiali
          port: 20001

    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: grafana
          port: 3000
